<resources>
    <string name="app_name">Catascan</string>
    <string name="profile">Profile</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="say_hi_to">Hello, %s!</string>
    <string name="email">%s</string>
    <string name="notification">Notification</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dummy">dummy</string>
    <string name="logout">Logout</string>
    <string name="preview_or_result">%s</string>
    <string name="recent">Recent</string>
    <string name="infor_normal">
        Scan result show that this eye is normal, means this eye have no sign of cataract.
        \n\n(confidence score : %s)
    </string>
    <string name="info_mature">
        Scan result show that this eye is detected as a mature cataract. A mature cataract is a cataract that has developed to an advanced stage, where the lens of the eye is opaque and dense, and vision is severely impaired.
        \n\n(confidence score : %s)
    </string>
    <string name="info_immature">
        Scan result show that this eye is detected as an immature cataract. An immature cataract is an early stage of a cataract, where the lens of the eyes is clouding that can cause vision problems.
        \n\n(confidence score : %s)
    </string>
    <string name="date">%s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_history_yet">No history yet!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_yapping">From cataract detection to scan history and information on cataract types, CataScan\n helps protect your eye health.</string>
    <string name="catascan">CataScan</string>
    <string name="sight">Sight</string>
    <string name="your">Your</string>
    <string name="protecting">Protecting</string>
    <string name="eyes">Eyes,</string>
    <string name="caring_for_your">Caring for Your</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_account">Create Account</string>
    <string name="register_to_continue">Register to continue</string>
    <string name="agree_to_terms_and_conditions">Agree to terms and conditions</string>
    <string name="hello">Hello,</string>
    <string name="cataners">Cataners!</string>
    <string name="tips_to_prevent_cataracts_and_protect_eye_nhealth">Tips to prevent cataracts and protect eye health</string>
    <string name="search_hint">search....</string>
    <string name="start_your_cataract_eye_care_nscan_now">Start scan your eye now</string>
    <string name="related_article">International Articles Related to Cataracts</string>
    <string name="cataract_types">Cataract Types</string>
    <string name="type_name">Cataract Type</string>
    <string name="back">Back</string>
    <string-array name="languages">
        <item name="english">English</item>
        <item name="indonesia">Indonesia</item>
    </string-array>
    <string-array name="data_name">
        <item>Nuclear Sclerosis</item>
        <item>Cortical</item>
        <item>Posterior Subcapsular</item>
        <item>Congenital</item>
        <item>Morgagnian</item>
        <item>Diabetic</item>
        <item>Polychromatic</item>
        <item>Posterior Polar</item>
    </string-array>
    <string name="retry">retry</string>
    <string name="tips_to_prevent_ncataracts_and_nprotect_eye_health">Tips to prevent cataracts and protect eye health</string>
    <string name="cara_mencegah_mata_katarak">How to Prevent Cataracts</string>
    <string name="meski_bertambahnya_usia_menjadi_salah_satu_faktor_penyebab_mata_katarak_bukan_berarti_kondisi_ini_tak_bisa_dicegah_ada_beberapa_cara_mencegah_mata_katarak_terutama_bagi_anda_yang_memiliki_keluarga_dengan_riwayat_katarak">Although aging is one of the factors that cause cataracts, it does not mean that this condition cannot be prevented. There are several ways to prevent cataracts, especially for those who have a family history of cataracts.</string>
    <string name="caranya_meliputi">The methods include:</string>
    <string name="caranya_isi">1. Regular eye check-ups\nIf you regularly check your eye health, doctors will be able to quickly detect any signs of cataracts. Cataracts that are still in the early stages are easier to handle and treat by an eye doctor.\n\nAdults are advised to have an eye check-up every two years until the age of 50. Above 50 years old, it is recommended to have an eye exam at least once a year.\n\nMeanwhile, individuals with a history of diabetes are at a higher risk of developing eye diseases and are advised to have more frequent eye check-ups.\n\n2. Protecting eyes from UV exposure\nExposure to ultraviolet rays can increase the risk of cataracts. Moreover, UV rays can worsen existing cataracts because they can damage the proteins in the eye lens.\n\nTo prevent cataracts, avoid direct sunlight by wearing sunglasses or a wide-brimmed hat, especially when engaging in outdoor activities under direct sunlight.\n\nChoose sunglasses that block at least 99% of UV rays and are wide enough for maximum protection.\n\n3. Maintaining overall health\nMaintaining overall health is very important in preventing diseases, including cataracts. This is because several conditions can increase the risk of cataracts, such as diabetes, unhealthy eye conditions, and complications from previous eye surgeries.\n\nYou should also be cautious about long-term corticosteroid use as it can increase the risk of cataracts. Always ensure regular check-ups with your doctor regarding steroid use and any underlying conditions you may have.\n\n4. Eating nutritious foods\nResearch shows that consuming foods containing antioxidants, such as lutein and zeaxanthin, vitamin C, and vitamin E, significantly lowers the risk of cataracts. Antioxidants help prevent protein damage in the eye lens, thus preventing cataracts.\n\nYou can benefit from antioxidants by consuming dark green leafy vegetables. Natural sources of vitamin C can be obtained from oranges, tomatoes, strawberries, broccoli, melons, and kiwis, while vitamin E sources include vegetable oils, almonds, and spinach.\n\n5. Maintaining an ideal body weight\nBeing overweight or obese can increase the risk of diabetes, which is a risk factor for cataracts. Therefore, ensure that you maintain an ideal body weight by following a healthy diet, eating balanced nutrition, and exercising regularly.\n\n6. Quitting smoking\nSmoking increases the risk of cataracts because it creates more free radicals in your eyes. To reduce the risk of cataracts, you are advised to reduce or quit smoking. If this is difficult, try consulting a doctor.\n\n7. Limiting alcohol consumption\nIf you are a fan of alcoholic beverages, it is best to limit or stop this habit. Studies show that excessive alcohol consumption can increase the risk of cataracts.\n\nCataracts are often not detected early because they rarely cause symptoms. However, over time, you may experience complaints, even difficulty seeing. Therefore, take preventive measures to keep your eyes healthy until old age.\n\nIf you have any eye complaints, such as difficulty seeing at night, double vision, blurry vision, or other cataract symptoms, consult a doctor immediately for proper treatment.</string>
</resources>